# multi-mcp-servers

./: README.md  crypto.py  local.py  main.py  prompt.py  pyproject.toml  resources.py  screenshot.py  test_math.py
src/mcpserver/: deployment.py
