[project]
name = "multi-mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.11.0",
    "pyautogui>=0.9.54",
    "requests>=2.32.4",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[toos.setuptools]
package-dir = {"" ="src"}

[toos.setuptools.package.find]
where = ["src"]